# whichbot-r

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
bot/: .cvsignore  CMakeLists.txt  bot.dsp  bot.dsw  bot.sln  bot.vcproj  build.properties  build.xml  nmbuild.bat
bot/conf/: wb_tr_ns_bast.pot  wb_tr_ns_eclipse.pot  wb_tr_ns_tanith.pot  wb_translate.pot  whichbot.txt
bot/data/addons/metamod/: plugins.ini
bot/data/waypoints/: co_angst.wpt  co_core.wpt  co_daimos.wpt  co_faceoff.wpt  co_kestrel.wpt  co_niveus.wpt  co_pulse.wpt  co_rebirth.wpt  co_sava.wpt  co_ulysses.wpt  ns_agora.wpt  ns_altair.wpt  ns_ayumi.wpt  ns_bast.wpt  ns_eclipse.wpt  ns_eon.wpt  ns_hera.wpt  ns_lost.wpt  ns_metal.wpt  ns_mineshaft.wpt  ns_nancy.wpt  ns_tanith.wpt  ns_veil.wpt
bot/data/waypoints/dev/: ns_nothing.wpt
bot/docs/: WhichbotWaypointingGuide.doc  announcement-v0.1.txt  announcement-v0.2.txt  announcement-v0.3.txt  announcement-v0.31.txt  announcement-v0.4.txt  announcement-v0.5.txt  announcement-v0.51.txt  announcement-v0.6.txt  announcement-v0.61.txt  announcement-v0.7.txt  announcement-v0.8.txt  announcement-v0.91.txt  announcement-v0.92.txt  announcement-v0.93.txt  announcement-v0.94.txt  announcement-v0.94c.txt  announcement-v0.94g.txt  announcement-v1.0.txt  announcement-v1.04.txt  announcement-v1.05.txt  behaviour.html  credits.html  features.shtml  gpl_v2.html  index.shtml  licensing.html
bot/docs/bundled/: INSTALL.txt  README.txt
bot/docs/includes/: logo.shtml  navbar.shtml
bot/src/cpp/: Bot.cpp  Bot.h  BotManager.cpp  BotManager.h  BotTypedefs.h  NSConstants.h  StatusReporter.cpp  StatusReporter.h
bot/src/cpp/combat/: CombatNavMethod.cpp  CombatNavMethod.h  CombatStrategy.cpp  CombatStrategy.h
bot/src/cpp/combat/CVS/: Entries  Repository
bot/src/cpp/config/: Config.cpp  Config.h  EntityInfo.cpp  EntityInfo.h  TranslationManager.cpp  TranslationManager.h
bot/src/cpp/config/CVS/: Entries  Repository
bot/src/cpp/framework/: Log.cpp  Log.h
bot/src/cpp/framework/CVS/: Entries  Repository  Root
bot/src/cpp/linkage/: bot.def  dllapi.cpp  dllapi.h  engine_api.cpp  engine_intercepts.cpp  engine_intercepts.h  h_export.cpp  meta_api.cpp  plugin.cpp  version.h
bot/src/cpp/message/: ClientCommandDispatcher.cpp  ClientCommandDispatcher.h  ClientCommandHandlers.cpp  NetMessage.cpp  NetMessage.h  NetMessageDispatcher.cpp  NetMessageDispatcher.h  NetMessageElement.cpp  NetMessageElement.h  NetMessageHandlers.cpp
bot/src/cpp/message/CVS/: Entries  Repository
bot/src/cpp/navigation/: BotMovement.cpp  BotMovement.h  BuildNavMethod.cpp  BuildNavMethod.h  NavigationEngine.cpp  NavigationEngine.h  NavigationMethod.cpp  NavigationMethod.h  WaypointDebugger.cpp  WaypointDebugger.h  WaypointManager.cpp  WaypointManager.h  WaypointNavMethod.cpp  WaypointNavMethod.h
bot/src/cpp/sensory/: AuditoryManager.cpp  AuditoryManager.h  AuditoryTrace.cpp  AuditoryTrace.h  BotSensor.cpp  BotSensor.h  Target.cpp  Target.h
bot/src/cpp/strategy/: AmbushStrategy.cpp  AmbushStrategy.h  AttackStrategy.cpp  AttackStrategy.h  BuilderStrategy.cpp  BuilderStrategy.h  FleeStrategy.cpp  FleeStrategy.h  HiveMind.cpp  HiveMind.h  PackFollowerStrategy.cpp  PackFollowerStrategy.h  PackInfo.cpp  PackInfo.h  PackLeaderStrategy.cpp  PackLeaderStrategy.h  PackManager.cpp  PackManager.h  RescueStrategy.cpp  RescueStrategy.h  ScoutStrategy.cpp  ScoutStrategy.h  StatusReportElement.cpp  StatusReportElement.h  Strategy.cpp  Strategy.h  StrategyManager.cpp  StrategyManager.h
bot/src/cpp/worldstate/: AreaInfo.cpp  AreaInfo.h  AreaManager.cpp  AreaManager.h  EntityReference.cpp  EntityReference.h  EntityRegistry.cpp  EntityRegistry.h  HiveInfo.cpp  HiveInfo.h  HiveManager.cpp  HiveManager.h  WorldStateUtil.cpp  WorldStateUtil.h
pathematics/: CMakeLists.txt  build.properties  build.xml  pathematics.dsp  pathematics.dsw  pathematics.sln  pathematics.vcproj  pathematicstest.dsp  pathematicstest.vcproj
pathematics/src/cpp/: Pathematics.def  PathematicsTypedefs.h
pathematics/src/cpp/engine/: NodeIdBag.cpp  NodeIdBag.h  PathData.cpp  PathData.h  PathManager.cpp  PathManager.h  Reward.h
pathematics/src/cpp/model/: Digraph.cpp  Digraph.h  Edge.cpp  Edge.h  Node.cpp  Node.h  TerrainData.cpp  TerrainData.h  Vector3D.h
pathematics/src/cpp/test/: PathematicsTest.cpp
